# ml-practice

./: .gitignore  pyproject.toml  requirements.txt
ml_practice/: cifar10.py  images.py  load_data.py  main.py  net.py  tester.py  trainer.py
